v0.4.0/_sources/autoapi/microcalorimetry/analysis/index.rst.txt
microcalorimetry.analysis
=========================

.. py:module:: microcalorimetry.analysis

.. autoapi-nested-parse::

   
   This module contains high-level routines for performing microcalorimetry analysis.

   This module should contain static functions which take in configuration objects,
   and primative types (strings, numbers) that are then used to process the data.
   Where possible, they should use math functions defined in the math module.

   These functions should be interfaceable via either a command line interface or
   a GUI where the user can only enter string-like inputs.

   These function should utilize DataModelContainers when referring to inputs that represent inputs that cant be described
   by a short string (i.e. something convenient for a command line interface). This
   enables the passing of in-memory representations
   of data via the DataModelContainers so that it isn't required to serialize the output of one function
   in order to pass it to the input of another.















   ..
       !! processed by numpydoc !!


Functions
---------

.. autoapisummary::

   microcalorimetry.analysis.make_correction_factor
   microcalorimetry.analysis.make_k_coeffs
   microcalorimetry.analysis.make_eta
   microcalorimetry.analysis.review_eta


Package Contents
----------------

.. py:function:: make_correction_factor(gc_regressor_rows: microcalorimetry.configs.CorrectionFactorModelInputs, correction_terms: int, calc_thermal_weights: bool = False, make_plots: bool = True, nominals: bool = False, cache_s11: bool = True) -> tuple[microcalorimetry.configs.GC, list[matplotlib.pyplot.Figure]]

   
   Calculate the correction factor for a given sensor model.

   The normal_standards and special_standards are used to generate
   the regressor matrix. All possible combinations of connect cycles
   that use the same splitter_id are used to build the regressor matrix.

   :Parameters:

       **gcinputs: configs.CorrectionFactorDataInputs**
           Dictionary of CorrectionFactorDataInputs.

       **correction_terms** : int
           Number of terms in correction factor. Usually 1.

       **calc_thermal_weights** : bool, optional
           If true, returns thermal weighting coefficients
           isntead of the correction factors (g_ci = wi/W0) where W0 is
           the sensitivity of the calorimeter.

       **make_plots** : bool, optional
           Makes plots. The default is True.

       **nominals** : bool, optional
           If true, propagates uncertainties.

       **cache_s11** : bool, optional
           If true, read ins every s-parameter file once to avoid redundant loading of files, memory intensive.



   :Returns:

       **gc** : RMEMeas
           Correction factor in RMEMeas format.

       **figs** : list[Figure]
           Matplotlib figures generated (if asked to make plots.)











   ..
       !! processed by numpydoc !!

.. py:function:: make_k_coeffs(parsed_dcsweep: microcalorimetry.configs.ParsedDCSweep, constrain_zero: bool = False, p_of_e: bool = False, deg: int = 2, make_plots: bool = False) -> tuple[dict[microcalorimetry.configs.ThermoelectricFitCoefficients], matplotlib.pyplot.Figure]

   
   Load and analyze a sensitivity run.

   Takes in a sensitivity experiment and generate sensitivity coefficients
   and other relevant data.

   :Parameters:

       **parsed_dcsweep** : microcalorimetry.configs.ParsedDCSweep
           Steps parsed from sensitivity measurement. The first field
           is the applied voltage, the second field is the applied current,
           and the last field is the measure thermopile voltage.

       **constrain_zero** : bool, optional
           Constrains the fit to zero. The default is False.

       **p_of_e** : bool, optional
           Fit power as a function of thermopile voltage.
           The default is False.

       **deg** : int, optional
           Fit degrees of polynomial, the default is 2.

       **make_plots** : bool, optional
           Output plots if True, outputs None in place of figure
           otherwise.



   :Returns:

       **sensitivity** : dict[configs.ThermoelectricFitCoefficients]
           Sensitivity coefficients

       **figures** : list[plt.Figure]
           List of figures generated (empty if not made). Fit and residuals.











   ..
       !! processed by numpydoc !!

.. py:function:: make_eta(gc: microcalorimetry.configs.GC, s11: microcalorimetry.configs.S11, parsed_rfsweep: microcalorimetry.configs.ParsedRFSweep, historical_data: microcalorimetry.configs.EtaHistorical = None, thermal_weights: microcalorimetry.configs.ThermoelectricFitCoefficients = None, min_historical_repeats: int = 3, uncertainties: bool = True, make_plots: bool = True) -> tuple[microcalorimetry.configs.Eta, list[matplotlib.pyplot.Figure]]

   
   Make an effective efficiency measurement.


   :Parameters:

       **gc** : configs.GC
           Calorimetric correction factor terms.

       **s11** : configs.S11
           Reflection coefficient of the sensor.

       **parsed_rfsweep** : configs.ParsedRFSweep
           Parsed RF sweep output.

       **historical_data** : configs.EtaHistorical, optional
           Dictionary of key value pairs where values are
           configs.Eta. The default is None.

       **thermal_weights** : configs.ThermoelectricFitCoefficients, optional
           If provied, assumes gc are thermal weight coefficients and are scaled
           by the provided sensitivity coefficient before calculating
           effective efficiency. These should be thermopile sensitivity
           coefficients of the calorimeter calculated with the same model of
           sensor. The default is None.

       **min_historical_repeats** : int, optional
           Minium number of repeates (per frequency point) required for a data
           driven statistical model to be made for a particular frequency point.
           If less then this number are present, the statistical variation is
           interpolated from nearby points. The default is 3.

       **uncertainties** : bool, optional
           Propagate uncertainties during calculation, is faster to turn
           off during debugging or exploratory analysis. The default is True.

       **make_plots** : bool, optional
           Make plots during the analsysis,otherwise figs will
           be an empty list. The default is True.



   :Returns:

       **eta** : RMEMeas
           Effective efficiency.

       **fig** : List[plt.Figure]
           Any figures generated.











   ..
       !! processed by numpydoc !!

.. py:function:: review_eta(eta: microcalorimetry.configs.Eta, historical_data: microcalorimetry.configs.EtaHistorical, k: int = 2)

   
   Make review plots of effective efficiency data.


   :Parameters:

       **eta** : configs.Eta
           Effective efficiency being reviewed.

       **historical_data** : configs.EtaHistorical
           Historical data to review against.

       **k** : int, optional
           Expansion factor, by default 2














   ..
       !! processed by numpydoc !!

